ros2_truckplatoon/log/build_2022-10-30_17-40-26/truck/stdout_stderr.log
Scanning dependencies of target truck
[ 50%] Building CXX object CMakeFiles/truck.dir/src/src/Truck.cpp.o
[ 50%] Building CXX object CMakeFiles/truck.dir/src/truck.cpp.o
[ 50%] Building CXX object CMakeFiles/truck.dir/src/src/Leader.cpp.o
[ 66%] Building CXX object CMakeFiles/truck.dir/src/src/Communication.cpp.o
In file included from /Users/brodie/ros2_truckplatoon/src/truck/src/src/Truck.cpp:1:
/Users/brodie/ros2_truckplatoon/src/truck/src/src/Truck.hpp:4:10: warning: non-portable path to file '"utils/include.hpp"'; specified path differs in case from file name on disk [-Wnonportable-include-path]
In file included from /Users/brodie/ros2_truckplatoon/src/truck/src/src/Communication.cpp:1:
In file included from /Users/brodie/ros2_truckplatoon/src/truck/src/src/Communication.hpp#include "utils/Include.hpp":
3         ^~~~~~~~~~~~~~~~~~~
         "utils/include.hpp"
:
/Users/brodie/ros2_truckplatoon/src/truck/src/src/Truck.hpp:4:10: warning: non-portable path to file '"utils/include.hpp"'; specified path differs in case from file name on disk [-Wnonportable-include-path]
#include "utils/Include.hpp"
         ^~~~~~~~~~~~~~~~~~~
         "utils/include.hpp"
In file included from /Users/brodie/ros2_truckplatoon/src/truck/src/truck.cpp:2:
In file included from /Users/brodie/ros2_truckplatoon/src/truck/src/Platoon.hpp:4:
In file included from /Users/brodie/ros2_truckplatoon/src/truck/src/src/Leader.hpp:4:
/Users/brodie/ros2_truckplatoon/src/truck/src/src/Truck.hpp:4:10: warning: non-portable path to file '"utils/include.hpp"'; specified path differs in case from file name on disk [-Wnonportable-include-path]
#include "utils/Include.hpp"
         ^~~~~~~~~~~~~~~~~~~
         "utils/include.hpp"
In file included from /Users/brodie/ros2_truckplatoon/src/truck/src/src/Leader.cpp:1:
In file included from /Users/brodie/ros2_truckplatoon/src/truck/src/src/Leader.hpp:4:
/Users/brodie/ros2_truckplatoon/src/truck/src/src/Truck.hpp:4:10: warning: non-portable path to file '"utils/include.hpp"'; specified path differs in case from file name on disk [-Wnonportable-include-path]
#include "utils/Include.hpp"
         ^~~~~~~~~~~~~~~~~~~
         "utils/include.hpp"
In file included from /Users/brodie/ros2_truckplatoon/src/truck/src/truck.cpp:2:
/Users/brodie/ros2_truckplatoon/src/truck/src/Platoon.hpp:8:10: warning: non-portable path to file '"src/utils/include.hpp"'; specified path differs in case from file name on disk [-Wnonportable-include-path]
#include "src/utils/Include.hpp"
         ^~~~~~~~~~~~~~~~~~~~~~~
         "src/utils/include.hpp"
In file included from /Users/brodie/ros2_truckplatoon/src/truck/src/src/Communication.cpp:1:
In file included from /Users/brodie/ros2_truckplatoon/src/truck/src/src/Communication.hpp:2:
In file included from /Users/brodie/ros2_truckplatoon/src/truck/src/src/Event.hpp:4:
/Users/brodie/ros2_truckplatoon/src/truck/src/src/utils/PlatoonTypes.hpp:53:22: warning: unused function 'operator<<' [-Wunused-function]
static std::ostream& operator << ( std::ostream& outs, const EventType& p )
                     ^
/Users/brodie/ros2_truckplatoon/src/truck/src/src/utils/PlatoonTypes.hpp:108:22: warning: unused function 'operator<<' [-Wunused-function]
static std::ostream& operator << ( std::ostream& outs, const TruckState& p )
                     ^
In file included from /Users/brodie/ros2_truckplatoon/src/truck/src/src/Leader.cpp:1:
In file included from /Users/brodie/ros2_truckplatoon/src/truck/src/src/Leader.hpp:4:
In file included from /Users/brodie/ros2_truckplatoon/src/truck/src/src/Truck.hpp:3:
/Users/brodie/ros2_truckplatoon/src/truck/src/src/utils/PlatoonTypes.hpp:53:22: warning: unused function 'operator<<' [-Wunused-function]
static std::ostream& operator << ( std::ostream& outs, const EventType& p )
                     ^
/Users/brodie/ros2_truckplatoon/src/truck/src/src/utils/PlatoonTypes.hpp:108:22: warning: unused function 'operator<<' [-Wunused-function]
static std::ostream& operator << ( std::ostream& outs, const TruckState& p )
                     ^
In file included from /Users/brodie/ros2_truckplatoon/src/truck/src/truck.cpp:2:
In file included from /Users/brodie/ros2_truckplatoon/src/truck/src/Platoon.hpp:4:
In file included from /Users/brodie/ros2_truckplatoon/src/truck/src/src/Leader.hpp:4:
In file included from /Users/brodie/ros2_truckplatoon/src/truck/src/src/Truck.hpp:3:
/Users/brodie/ros2_truckplatoon/src/truck/src/src/utils/PlatoonTypes.hpp:53:22: warning: unused function 'operator<<' [-Wunused-function]
static std::ostream& operator << ( std::ostream& outs, const EventType& p )
                     ^
/Users/brodie/ros2_truckplatoon/src/truck/src/src/utils/PlatoonTypes.hpp:108:22: warning: unused function 'operator<<' [-Wunused-function]
static std::ostream& operator << ( std::ostream& outs, const TruckState& p )
                     ^
In file included from /Users/brodie/ros2_truckplatoon/src/truck/src/truck.cpp:2:
In file included from /Users/brodie/ros2_truckplatoon/src/truck/src/Platoon.hpp:11:
/Users/brodie/ros2_truckplatoon/src/truck/src/src/DrivingEvent.hpp:9:15: warning: private field '_speed' is not used [-Wunused-private-field]
    speedType _speed;
              ^
/Users/brodie/ros2_truckplatoon/src/truck/src/src/DrivingEvent.hpp:10:23: warning: private field '_stearingAngle' is not used [-Wunused-private-field]
    stearingAngleType _stearingAngle;
                      ^
/Users/brodie/ros2_truckplatoon/src/truck/src/src/DrivingEvent.hpp:11:18: warning: private field '_distance' is not used [-Wunused-private-field]
    distanceType _distance;
                 ^
3 warnings generated.
3 warnings generated.
In file included from /Users/brodie/ros2_truckplatoon/src/truck/src/src/Truck.cpp:1:
In file included from /Users/brodie/ros2_truckplatoon/src/truck/src/src/Truck.hpp:3:
In file included from /Users/brodie/ros2_truckplatoon/src/truck/src/src/utils/PlatoonTypes.hpp:5:
In file included from /Users/brodie/ros2_truckplatoon/src/truck/src/src/utils/Include.hpp:3:
In file included from /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX12.3.sdk/usr/include/c++/v1/iostream:37:
In file included from /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX12.3.sdk/usr/include/c++/v1/ios:214:
In file included from /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX12.3.sdk/usr/include/c++/v1/__locale:15:
In file included from /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX12.3.sdk/usr/include/c++/v1/string:522:
In file included from /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX12.3.sdk/usr/include/c++/v1/algorithm:653:
In file included from /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX12.3.sdk/usr/include/c++/v1/functional:500:
In file included from /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX12.3.sdk/usr/include/c++/v1/__functional/function.h:20:
/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX12.3.sdk/usr/include/c++/v1/__memory/shared_ptr.h:298:37: error: no matching constructor for initialization of 'Publisher'
        ::new ((void*)__get_elem()) _Tp(_VSTD::forward<_Args>(__args)...);
                                    ^
/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX12.3.sdk/usr/include/c++/v1/__memory/shared_ptr.h:1106:55: note: in instantiation of function template specialization 'std::__shared_ptr_emplace<Publisher, std::allocator<Publisher>>::__shared_ptr_emplace<>' requested here
    ::new ((void*)_VSTD::addressof(*__guard.__get())) _ControlBlock(__a, _VSTD::forward<_Args>(__args)...);
                                                      ^
/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX12.3.sdk/usr/include/c++/v1/__memory/shared_ptr.h:1115:19: note: in instantiation of function template specialization 'std::allocate_shared<Publisher, std::allocator<Publisher>, void>' requested here
    return _VSTD::allocate_shared<_Tp>(allocator<_Tp>(), _VSTD::forward<_Args>(__args)...);
                  ^
/Users/brodie/ros2_truckplatoon/src/truck/src/src/Truck.cpp:13:30: note: in instantiation of function template specialization 'std::make_shared<Publisher, void>' requested here
    this ->_publisher = std::make_shared<Publisher>();
                             ^
/Users/brodie/ros2_truckplatoon/src/truck/src/src/NodePublisher.hpp:16:3: note: candidate constructor not viable: requires single argument 'TopicName', but no arguments were provided
  Publisher(std::string TopicName)
  ^
/Users/brodie/ros2_truckplatoon/src/truck/src/src/NodePublisher.hpp:13:7: note: candidate constructor (the implicit copy constructor) not viable: requires 1 argument, but 0 were provided
class Publisher : public rclcpp::Node
      ^
7 warnings generated.
1 warning and 1 error generated.
gmake[2]: *** [CMakeFiles/truck.dir/build.make:95: CMakeFiles/truck.dir/src/src/Truck.cpp.o] Error 1
gmake[1]: *** [CMakeFiles/Makefile2:97: CMakeFiles/truck.dir/all] Error 2
gmake: *** [Makefile:160: all] Error 2
